objects/Appointment_Offer__c.object
<CustomObject>
    <fields>
        <fullName>End_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salesforce_Offer_End_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Salesforce Offer End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Salesforce_Offer_Start_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Salesforce Offer Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_Start__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Scheduled Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Service_Appointment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Appointment</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Appointment Offers</relationshipLabel>
        <relationshipName>Appointment_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Resource</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Appointment Offers</relationshipLabel>
        <relationshipName>Appointment_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <label>Appointment Offer</label>
    <nameField>
        <displayFormat>AO-{0000000}</displayFormat>
        <label>Appointment Offer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointment Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>